Track large video file with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+localhost_3000_api_contacts_sort=first_name[[:space:]]DESC[[:space:]]-[[:space:]]Google[[:space:]]Chrome[[:space:]]2024-10-05[[:space:]]09-32-19.mp4 filter=lfs diff=lfs merge=lfs -text
